ASM-2435 Refactor WebSecurityConfig to use List.of for immutable lists and simplify securityFilterChain method signature